--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -1,42 +1,167 @@
-article > *:not(.entry-content),
-.entry-content > * {
-    @apply mx-auto max-w-content;
+body {
+	@apply font-sr;
 }
 
-.entry-content, .block-editor-block-list__layout {
-    h1 {
-        @apply text-2xl;
-    }
+/* **************************    EXTRA CONTAINERS    ************************** */
+.container-lg {
+	@apply container lg:max-w-screen-lg;
+}
+.container-xl {
+	@apply container xl:max-w-screen-xl;
+}
 
-    h2 {
-        @apply text-xl;
-    }
+.container-xxl {
+	@apply container xxl:max-w-screen-xxl;
+}
 
-    h3 {
-        @apply text-lg;
-    }
+.container-2k {
+	@apply max-w-[2000px];
+}
 
-    p, ul, ol {
-        a {
-            @apply text-blue-500 underline;
+/* **************************    DEFAULT TAILPRESS    ************************** */
 
-            &:hover {
-                @apply no-underline;
-            }
-        }
+article > *:not(.entry-content),
+.entry-content > * {
+	@apply mx-auto max-w-content;
+}
 
-        @apply mb-8;
-    }
+.entry-content,
+.block-editor-block-list__layout {
+	h1 {
+		@apply text-2xl;
+	}
 
-    ul:not(.block-editor-block-variation-picker__variations) {
-        li {
-            @apply list-disc list-inside;
-        }
-    }
+	h2 {
+		@apply text-xl;
+	}
 
-    ol {
-        li {
-            @apply list-decimal list-inside;
-        }
-    }
+	h3 {
+		@apply text-lg;
+	}
+
+	p,
+	ul,
+	ol {
+		a {
+			@apply text-blue-500 underline;
+
+			&:hover {
+				@apply no-underline;
+			}
+		}
+
+		@apply mb-8;
+	}
+
+	ul:not(.block-editor-block-variation-picker__variations) {
+		li {
+			@apply list-disc list-inside;
+		}
+	}
+
+	ol {
+		li {
+			@apply list-decimal list-inside;
+		}
+	}
+}
+
+/* **************************    GLOBAL AREAS    ************************** */
+
+.header {
+	@apply relative pb-20;
+	&__logo {
+		width: 26%;
+	}
+
+	&__menus {
+		@apply w-[823px];
+		&__top {
+			@apply flex justify-between items-end pb-15;
+			.fa-magnifying-glass {
+				@apply text-secondary text-22 cursor-pointer;
+			}
+			&__acct {
+				@apply bg-secondary text-white h-[52px] w-[270px] flex items-center justify-center text-14;
+				i {
+					@apply mr-[10px] opacity-20;
+				}
+			}
+		}
+	}
+	&__utility__menu {
+		@apply text-secondary text-14 flex items-end;
+		li {
+			@apply px-[20px];
+			border-left: solid 1px rgba(127, 137, 137, 0.6);
+		}
+	}
+	&__primary {
+		@apply text-primary text-22 mr-[50px] font-sr    lg:mt-0 lg:p-0 lg:bg-transparent;
+		> ul {
+			@apply mt-[20px] justify-between;
+		}
+		&__submenu {
+			/************ LEVEL 2 BG **************/
+			@apply absolute left-0 top-[130px] w-full bg-brightgray text-14 py-40;
+			a {
+				@apply text-secondary;
+			}
+			&:not(.active) {
+				@apply opacity-0 pointer-events-none absolute;
+			}
+
+			ul.col-1,
+			ul.col-2 {
+				@apply text-18;
+				li {
+					@apply relative transition-colors duration-300 pb-10;
+					&:hover {
+						a {
+							@apply text-primary;
+						}
+						a::after {
+							filter: brightness(0) saturate(100%) invert(7%) sepia(80%)
+								saturate(4172%) hue-rotate(324deg) brightness(132%)
+								contrast(138%);
+						}
+					}
+					a {
+						&::after {
+							@apply font-fontawesome text-12 pl-10 left-1 relative;
+							content: " ";
+							background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12' fill='none'%3E%3Cpath d='M8.94097 6.39798L4.38604 10.9529C4.16636 11.1726 3.8102 11.1726 3.59054 10.9529L3.05929 10.4216C2.83998 10.2023 2.83956 9.8469 3.05835 9.62708L6.66822 6.00022L3.05835 2.37338C2.83956 2.15356 2.83998 1.79813 3.05929 1.57883L3.59054 1.04757C3.81022 0.827893 4.16638 0.827893 4.38604 1.04757L8.94095 5.60249C9.16063 5.82214 9.16063 6.1783 8.94097 6.39798Z' fill='%2315636E'/%3E%3C/svg%3E");
+						}
+					}
+				}
+			}
+			ul.col-2 {
+				@apply pl-25 text-14 col-span-2  max-h-[300px] flex flex-col flex-wrap;
+				border-left: 1px solid #c7c6c6;
+				/* columns: 2; 
+				column-gap: 20px;  */
+
+				li {
+				}
+			}
+			.menuCallToAction {
+				grid-column: 4;
+			}
+			> div {
+				@apply grid grid-cols-4;
+				height: inherit;
+				> ul {
+					/************ LEVEL 3 ************** COLUMN */
+					/* @apply w-[25%] relative; */
+				}
+				> ul > li > ul:not(.active) {
+					@apply opacity-0 pointer-events-none;
+				}
+				> ul > li > ul {
+					/************ LEVEL 3 **************/
+					@apply absolute bg-secondary right-0;
+				}
+			}
+		}
+	}
 }
