--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -71,7 +71,8 @@ article > *:not(.entry-content),
 .header {
 	@apply relative pb-20;
 	&__logo {
-		width: 26%;
+		@apply pl-50 pt-30;
+		width: 405px;
 	}
 
 	&__menus {
@@ -103,7 +104,7 @@ article > *:not(.entry-content),
 		}
 		&__submenu {
 			/************ LEVEL 2 BG **************/
-			@apply absolute left-0 top-[130px] w-full bg-brightgray text-14 py-40;
+			@apply absolute left-0 top-[140px] w-full bg-brightgray text-14 py-40;
 			a {
 				@apply text-secondary;
 			}
@@ -112,11 +113,13 @@ article > *:not(.entry-content),
 			}
 
 			ul.col-1,
-			ul.col-2 {
+			ul.col-2,
+			ul.col-3 {
 				@apply text-18;
 				li {
 					@apply relative transition-colors duration-300 pb-10;
-					&:hover {
+					&:hover,
+					&.active {
 						a {
 							@apply text-primary;
 						}
@@ -135,8 +138,11 @@ article > *:not(.entry-content),
 					}
 				}
 			}
-			ul.col-2 {
-				@apply pl-25 text-14 col-span-2  max-h-[300px] flex flex-col flex-wrap;
+			ul.col-1 {
+			}
+			ul.col-2,
+			ul.col-3 {
+				@apply pl-25 text-14   flex flex-col flex-wrap;
 				border-left: 1px solid #c7c6c6;
 				/* columns: 2; 
 				column-gap: 20px;  */
@@ -145,10 +151,29 @@ article > *:not(.entry-content),
 				}
 			}
 			.menuCallToAction {
+				@apply pl-50;
 				grid-column: 4;
+				border-left: 1px solid #c7c6c6;
+				> a {
+					@apply text-primary text-18 font-700 block mb-20;
+				}
+				.menu-item-description {
+					@apply text-darkgray text-14 block mb-20;
+				}
+				> ul {
+					a {
+						@apply bg-primary text-18 text-white block py-20 text-center;
+						&::after {
+							@apply font-fontawesome text-12 pl-20 pt-[3px] left-1 relative;
+							content: " ";
+							background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M11.9213 8.53129L5.84805 14.6045C5.55514 14.8974 5.08027 14.8974 4.78739 14.6045L4.07905 13.8962C3.78664 13.6038 3.78608 13.1299 4.0778 12.8368L8.89095 8.00095L4.0778 3.16516C3.78608 2.87207 3.78664 2.39816 4.07905 2.10576L4.78739 1.39741C5.0803 1.10451 5.55517 1.10451 5.84805 1.39741L11.9213 7.47063C12.2142 7.76351 12.2142 8.23838 11.9213 8.53129Z' fill='%23F5F5F8'/%3E%3C/svg%3E");
+						}
+					}
+				}
 			}
 			> div {
-				@apply grid grid-cols-4;
+				@apply grid;
+				grid-template-columns: 20% 20% 34% auto;
 				height: inherit;
 				> ul {
 					/************ LEVEL 3 ************** COLUMN */
