--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -124,9 +124,6 @@
 .flex {
 		display: flex;
 }
-.grid {
-		display: grid;
-}
 .contents {
 		display: contents;
 }
@@ -138,12 +135,6 @@
 }
 .h-6 {
 		height: 1.5rem;
-}
-.h-11 {
-		height: 2.75rem;
-}
-.h-\[52px\] {
-		height: 52px;
 }
 .min-h-screen {
 		min-height: 100vh;
@@ -171,9 +162,6 @@
 }
 .cursor-pointer {
 		cursor: pointer;
-}
-.grid-cols-2 {
-		grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .flex-col {
 		flex-direction: column;
@@ -222,13 +210,13 @@
 		--tw-bg-opacity: 1;
 		background-color: rgb(147 0 39 / var(--tw-bg-opacity));
 }
-.bg-white {
-		--tw-bg-opacity: 1;
-		background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
 .bg-secondary {
 		--tw-bg-opacity: 1;
 		background-color: rgb(21 99 110 / var(--tw-bg-opacity));
+}
+.bg-white {
+		--tw-bg-opacity: 1;
+		background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .bg-gradient-to-r {
 		background-image: linear-gradient(to right, var(--tw-gradient-stops));
@@ -266,9 +254,6 @@
 .py-12 {
 		padding-top: 12px;
 		padding-bottom: 12px;
-}
-.text-center {
-		text-align: center;
 }
 .text-2xl {
 		font-size: 2rem;
@@ -319,6 +304,9 @@
 }
 .opacity-0 {
 		opacity: 0;
+}
+.outline {
+		outline-style: solid;
 }
 .invert {
 		--tw-invert: invert(100%);
