--- a/resources/css/partials/globals.css
+++ b/resources/css/partials/globals.css
@@ -22,7 +22,7 @@ body {
 
 article > *:not(.entry-content),
 .entry-content > * {
-	@apply mx-auto max-w-content;
+	/* @apply mx-auto max-w-content; */
 }
 
 .entry-content,
@@ -68,7 +68,7 @@ article > *:not(.entry-content),
 
 /* **************************    GLOBAL AREAS    ************************** */
 .mobileHeader {
-	@apply lg:hidden pb-20;
+	@apply lg:hidden md:pb-20;
 	&__menu {
 		@apply bg-brightgray duration-300 transition-all max-h-[1000px];
 		clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 100%);
@@ -566,6 +566,77 @@ article > *:not(.entry-content),
 		}
 		a {
 			@apply ul-anim-white hover:ul-anim-hover;
+		}
+	}
+}
+
+.mainstage-slide {
+	&__left {
+		@apply flex  justify-center md:justify-end;
+	}
+	&__left-inner {
+		@apply max-h-[500px] max-w-[686px] px-30 md:px-[100px] pt-40 pb-50  md:py-[60px] flex flex-col justify-center items-start;
+	}
+	&__right {
+		@apply relative;
+		img {
+			@apply max-md:aspect-square md:h-[500px] w-full object-cover;
+		}
+	}
+	&__wrapper {
+		@apply flex bg-primary text-white bg-no-repeat;
+		@apply flex-col-reverse md:flex-row;
+		background-image: url("../images/waves-red.png");
+		background-position: 40% 100%;
+
+		> div {
+			@apply md:w-1/2;
+		}
+	}
+	&__headline {
+		@apply text-44 font-700 mb-15 font-primary;
+		line-height: 113.636%;
+		font-size: clamp(28px, 4vw, 44px);
+	}
+	&__content {
+		@apply text-18 mb-35;
+		line-height: 155.556%;
+		font-size: clamp(15px, 3vw, 18px);
+	}
+	&__link {
+		@apply inline-block bg-white text-primary px-20 min-w-full md:min-w-[270px] py-15 text-center text-18;
+	}
+	&__play {
+		@apply absolute transition-all duration-300;
+		top: calc(50% - 65px);
+		left: calc(50% - 65px);
+		&:hover {
+			@apply opacity-50;
+		}
+	}
+}
+
+.mainstage .slick-dots {
+	@apply bottom-[-35px] md:bottom-[-40px];
+	li {
+		@apply mx-5 md:mx-15 transition-all duration-300;
+		&:hover {
+		}
+		&:not(.slick-active):hover {
+			@apply opacity-40;
+		}
+	}
+	li button:before {
+		@apply text-20 bg-white border-primary border-2 border-opacity-100 rounded-full;
+		@apply w-[15px] h-[15px] md:w-[25px] md:h-[25px] opacity-100;
+		content: " ";
+		&:hover {
+		}
+	}
+	li.slick-active button:before {
+		@apply bg-primary;
+		&:hover {
+			@apply opacity-100;
 		}
 	}
 }
