--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -25,14 +25,14 @@
 				max-width: 940px;
 		}
 }
-@media (min-width: 1281px) {
+@media (min-width: 1150px) {
 		.container {
-				max-width: 1281px;
+				max-width: 1150px;
 		}
 }
-@media (min-width: 1384px) {
+@media (min-width: 1320px) {
 		.container {
-				max-width: 1384px;
+				max-width: 1320px;
 		}
 }
 @media (min-width: 2000px) {
@@ -89,11 +89,46 @@
 		filter: brightness(0) saturate(100%) invert(17%) sepia(87%) saturate(2841%)
 			hue-rotate(172deg) brightness(88%) contrast(84%);
 	}
+	.button-main {
+		display: inline-block;
+		--tw-bg-opacity: 1;
+		background-color: rgb(21 99 110 / var(--tw-bg-opacity));
+		padding-top: .9375rem;
+		padding-bottom: .9375rem;
+		padding-left: 2.5rem;
+		padding-right: 2.5rem;
+		text-align: center;
+		font-size: 1.125rem;
+		--tw-text-opacity: 1;
+		color: rgb(255 255 255 / var(--tw-text-opacity));
+		transition-property: all;
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+		transition-duration: 300ms;
+}
+	.button-main:hover {
+		--tw-bg-opacity: 1;
+		background-color: rgb(12 87 95 / var(--tw-bg-opacity));
+}
+.visible {
+		visibility: visible;
+}
 .static {
 		position: static;
 }
+.absolute {
+		position: absolute;
+}
+.relative {
+		position: relative;
+}
 .sticky {
 		position: sticky;
+}
+.bottom-\[23px\] {
+		bottom: 23px;
+}
+.left-0 {
+		left: 0px;
 }
 .m-8 {
 		margin: 0.5rem;
@@ -102,18 +137,31 @@
 		margin-left: auto;
 		margin-right: auto;
 }
+.my-50 {
+		margin-top: 3.125rem;
+		margin-bottom: 3.125rem;
+}
 .my-8 {
 		margin-top: 0.5rem;
 		margin-bottom: 0.5rem;
 }
-.mb-10 {
-		margin-bottom: .625rem;
+.mb-20 {
+		margin-bottom: 1.25rem;
+}
+.mb-30 {
+		margin-bottom: 1.875rem;
 }
 .mb-4 {
 		margin-bottom: 0.25rem;
 }
 .mb-8 {
 		margin-bottom: 0.5rem;
+}
+.mt-20 {
+		margin-top: 1.25rem;
+}
+.mt-5 {
+		margin-top: .3125rem;
 }
 .block {
 		display: block;
@@ -123,6 +171,9 @@
 }
 .flex {
 		display: flex;
+}
+.grid {
+		display: grid;
 }
 .contents {
 		display: contents;
@@ -136,6 +187,9 @@
 .h-6 {
 		height: 1.5rem;
 }
+.h-\[1px\] {
+		height: 1px;
+}
 .min-h-screen {
 		min-height: 100vh;
 }
@@ -148,20 +202,23 @@
 .w-full {
 		width: 100%;
 }
-.max-w-screen-md {
-		max-width: 768px;
+.max-w-\[1160px\] {
+		max-width: 1160px;
+}
+.max-w-screen-xxl {
+		max-width: 1320px;
 }
 .max-w-sm {
 		max-width: 24rem;
-}
-.flex-none {
-		flex: none;
 }
 .flex-grow {
 		flex-grow: 1;
 }
 .cursor-pointer {
 		cursor: pointer;
+}
+.grid-cols-1 {
+		grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 .flex-col {
 		flex-direction: column;
@@ -175,24 +232,31 @@
 .justify-between {
 		justify-content: space-between;
 }
+.gap-x-4 {
+		-moz-column-gap: 1rem;
+		     column-gap: 1rem;
+}
 .rounded {
 		border-radius: 0.25rem;
 }
-.rounded-xl {
-		border-radius: 0.75rem;
-}
-.border {
-		border-width: 1px;
-}
 .border-b {
 		border-bottom-width: 1px;
+}
+.border-\[\#888\] {
+		--tw-border-opacity: 1;
+		border-color: rgb(136 136 136 / var(--tw-border-opacity));
 }
 .border-primary {
 		--tw-border-opacity: 1;
 		border-color: rgb(147 0 39 / var(--tw-border-opacity));
 }
-.border-transparent {
-		border-color: transparent;
+.bg-\[\#BCBCBC\] {
+		--tw-bg-opacity: 1;
+		background-color: rgb(188 188 188 / var(--tw-bg-opacity));
+}
+.bg-antiflashwhite {
+		--tw-bg-opacity: 1;
+		background-color: rgb(236 242 243 / var(--tw-bg-opacity));
 }
 .bg-gray-200 {
 		--tw-bg-opacity: 1;
@@ -201,10 +265,6 @@
 .bg-gray-50 {
 		--tw-bg-opacity: 1;
 		background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-.bg-gray-900 {
-		--tw-bg-opacity: 1;
-		background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 .bg-primary {
 		--tw-bg-opacity: 1;
@@ -218,57 +278,55 @@
 		--tw-bg-opacity: 1;
 		background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-gradient-to-r {
-		background-image: linear-gradient(to right, var(--tw-gradient-stops));
+.px-20 {
+		padding-left: 1.25rem;
+		padding-right: 1.25rem;
 }
-.from-blue-50 {
-		--tw-gradient-from: #eff6ff var(--tw-gradient-from-position);
-		--tw-gradient-from-position:  ;
-		--tw-gradient-to: rgb(239 246 255 / 0)  var(--tw-gradient-from-position);
-		--tw-gradient-to-position:  ;
-		--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-.from-10\% {
-		--tw-gradient-from-position: 10%;
-}
-.via-sky-100 {
-		--tw-gradient-via-position:  ;
-		--tw-gradient-to: rgb(224 242 254 / 0)  var(--tw-gradient-to-position);
-		--tw-gradient-to-position:  ;
-		--tw-gradient-stops: var(--tw-gradient-from), #e0f2fe var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-.via-30\% {
-		--tw-gradient-via-position: 30%;
-}
-.to-blue-200 {
-		--tw-gradient-to: #bfdbfe var(--tw-gradient-to-position);
-		--tw-gradient-to-position:  ;
-}
-.to-90\% {
-		--tw-gradient-to-position: 90%;
-}
-.px-12 {
-		padding-left: 12px;
-		padding-right: 12px;
+.px-40 {
+		padding-left: 2.5rem;
+		padding-right: 2.5rem;
 }
 .py-12 {
 		padding-top: 12px;
 		padding-bottom: 12px;
 }
+.py-15 {
+		padding-top: .9375rem;
+		padding-bottom: .9375rem;
+}
+.py-50 {
+		padding-top: 3.125rem;
+		padding-bottom: 3.125rem;
+}
+.pb-20 {
+		padding-bottom: 1.25rem;
+}
+.text-center {
+		text-align: center;
+}
+.text-15 {
+		font-size: .9375rem;
+}
+.text-18 {
+		font-size: 1.125rem;
+}
+.text-24 {
+		font-size: 1.5rem;
+}
 .text-2xl {
 		font-size: 2rem;
+}
+.text-36 {
+		font-size: 2.25rem;
 }
 .text-lg {
 		font-size: 1.2rem;
 }
-.text-xl {
-		font-size: 1.5rem;
+.font-700 {
+		font-weight: 700;
 }
 .uppercase {
 		text-transform: uppercase;
-}
-.tracking-tight {
-		letter-spacing: -0.025em;
 }
 .text-gray-600 {
 		--tw-text-opacity: 1;
@@ -286,13 +344,13 @@
 		--tw-text-opacity: 1;
 		color: rgb(17 24 39 / var(--tw-text-opacity));
 }
+.text-midgray {
+		--tw-text-opacity: 1;
+		color: rgb(72 80 80 / var(--tw-text-opacity));
+}
 .text-primary {
 		--tw-text-opacity: 1;
 		color: rgb(147 0 39 / var(--tw-text-opacity));
-}
-.text-secondary {
-		--tw-text-opacity: 1;
-		color: rgb(21 99 110 / var(--tw-text-opacity));
 }
 .text-white {
 		--tw-text-opacity: 1;
@@ -326,13 +384,10 @@
 		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 		transition-duration: 150ms;
 }
-.transition-colors {
-		transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+.transition-all {
+		transition-property: all;
 		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 		transition-duration: 150ms;
-}
-.duration-200 {
-		transition-duration: 200ms;
 }
 .alignfull {
 		margin: 0.5rem calc(50% - 50vw) !important;
@@ -341,7 +396,7 @@
 }
 .alignwide {
 		margin: 0.5rem 0;
-		max-width: 1281px !important;
+		max-width: 1150px !important;
 }
 .alignnone {
 		margin-left: 0;
@@ -382,41 +437,253 @@
 		font-size: 0.9rem;
 		color: #4b5563;
 }
+.entry-content > p, .block-editor-block-list__layout > p {
+		/* @apply max-w-[1160px] px-20 mx-auto; */
+		width: 100%;
+		margin-right: auto;
+		margin-left: auto;
+		padding-right: 20px;
+		padding-left: 20px;
+	}
+@media (min-width: 375px) {
+		.entry-content > p, .block-editor-block-list__layout > p {
+				max-width: 375px;
+		}
+}
+@media (min-width: 640px) {
+		.entry-content > p, .block-editor-block-list__layout > p {
+				max-width: 640px;
+		}
+}
+@media (min-width: 768px) {
+		.entry-content > p, .block-editor-block-list__layout > p {
+				max-width: 768px;
+		}
+}
+@media (min-width: 940px) {
+		.entry-content > p, .block-editor-block-list__layout > p {
+				max-width: 940px;
+		}
+}
+@media (min-width: 1150px) {
+		.entry-content > p, .block-editor-block-list__layout > p {
+				max-width: 1150px;
+		}
+}
+@media (min-width: 1320px) {
+		.entry-content > p, .block-editor-block-list__layout > p {
+				max-width: 1320px;
+		}
+}
+@media (min-width: 2000px) {
+		.entry-content > p, .block-editor-block-list__layout > p {
+				max-width: 2000px;
+		}
+}
+@media (min-width: 1150px) {
+		.entry-content > p, .block-editor-block-list__layout > p {
+				max-width: 1150px;
+		}
+}
+.entry-content .acf-block a, .block-editor-block-list__layout .acf-block a {
+		text-decoration-line: none;
+}
+.entry-content .image-pathways, .block-editor-block-list__layout .image-pathways {
+		margin-top: 3.125rem;
+		margin-bottom: 3.125rem;
+}
+.entry-content .image-pathways__grid, .block-editor-block-list__layout .image-pathways__grid {
+		display: grid;
+		grid-template-columns: repeat(1, minmax(0, 1fr));
+		-moz-column-gap: 1rem;
+		     column-gap: 1rem;
+}
+@media (min-width: 768px) {
+		.entry-content .image-pathways__grid, .block-editor-block-list__layout .image-pathways__grid {
+				grid-template-columns: repeat(3, minmax(0, 1fr));
+		}
+}
+@media (min-width: 1150px) {
+		.entry-content .image-pathways__grid, .block-editor-block-list__layout .image-pathways__grid {
+				-moz-column-gap: 5rem;
+				     column-gap: 5rem;
+		}
+}
+.entry-content .image-pathways__grid--count-3 > *, .block-editor-block-list__layout .image-pathways__grid--count-3 > * {
+				}
+@media not all and (min-width: 768px) {
+		.entry-content .image-pathways__grid--count-3 .item--3, .block-editor-block-list__layout .image-pathways__grid--count-3 .item--3 {
+				grid-row-start: 2;
+		}
+		.entry-content .image-pathways__grid--count-3 .item--4, .block-editor-block-list__layout .image-pathways__grid--count-3 .item--4 {
+				grid-row-start: 4;
+		}
+}
+.entry-content .image-pathways__grid--count-3 .item--5, .block-editor-block-list__layout .image-pathways__grid--count-3 .item--5 {
+					}
+@media (min-width: 768px) {
+		.entry-content .image-pathways__grid--count-4, .block-editor-block-list__layout .image-pathways__grid--count-4 {
+				grid-template-columns: repeat(4, minmax(0, 1fr));
+		}
+}
+@media not all and (min-width: 768px) {
+		.entry-content .image-pathways__grid--count-4 .item--4, .block-editor-block-list__layout .image-pathways__grid--count-4 .item--4 {
+				grid-row-start: 2;
+		}
+		.entry-content .image-pathways__grid--count-4 .item--5, .block-editor-block-list__layout .image-pathways__grid--count-4 .item--5 {
+				grid-row-start: 4;
+		}
+		.entry-content .image-pathways__grid--count-4 .item--6, .block-editor-block-list__layout .image-pathways__grid--count-4 .item--6 {
+				grid-row-start: 6;
+		}
+}
+.entry-content .image-pathways__item, .block-editor-block-list__layout .image-pathways__item {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+}
+.entry-content .image-pathways__item--0, .block-editor-block-list__layout .image-pathways__item--0 {
+			}
+.entry-content .image-pathways__image, .block-editor-block-list__layout .image-pathways__image {
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 1.875rem;
+		border-radius: 9999px;
+}
+.entry-content .image-pathways__headline, .block-editor-block-list__layout .image-pathways__headline {
+		margin-bottom: 0;
+		text-align: center;
+		font-size: 1.5rem;
+		font-weight: 700;
+		--tw-text-opacity: 1;
+		color: rgb(147 0 39 / var(--tw-text-opacity));
+}
+.entry-content .image-pathways__link, .block-editor-block-list__layout .image-pathways__link {
+		margin-top: 1.25rem;
+		margin-bottom: 1.875rem;
+		width: 100%;
+		display: inline-block;
+		--tw-bg-opacity: 1;
+		background-color: rgb(21 99 110 / var(--tw-bg-opacity));
+		padding-top: .9375rem;
+		padding-bottom: .9375rem;
+		padding-left: 2.5rem;
+		padding-right: 2.5rem;
+		text-align: center;
+		font-size: 1.125rem;
+		--tw-text-opacity: 1;
+		color: rgb(255 255 255 / var(--tw-text-opacity));
+		transition-property: all;
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+		transition-duration: 300ms;
+}
+.entry-content .image-pathways__link:hover, .block-editor-block-list__layout .image-pathways__link:hover {
+		--tw-bg-opacity: 1;
+		background-color: rgb(12 87 95 / var(--tw-bg-opacity));
+}
+.entry-content .image-pathways__link, .block-editor-block-list__layout .image-pathways__link {
+		display: block;
+}
+.entry-content .image-pathways__more-content, .block-editor-block-list__layout .image-pathways__more-content {
+		margin-bottom: 1.25rem;
+}
+.entry-content .image-pathways__more-open, .block-editor-block-list__layout .image-pathways__more-open {
+		position: relative;
+		margin-bottom: 1.25rem;
+		display: block;
+		cursor: pointer;
+		text-align: center;
+		font-size: .9375rem;
+		text-transform: uppercase;
+		--tw-text-opacity: 1;
+		color: rgb(72 80 80 / var(--tw-text-opacity));
+			letter-spacing: 2px;
+}
+.entry-content .image-pathways__more-open svg, .block-editor-block-list__layout .image-pathways__more-open svg {
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: .3125rem;
+		display: block;
+}
+.entry-content .image-pathways__more-open:before, .block-editor-block-list__layout .image-pathways__more-open:before {
+		position: absolute;
+		left: 0px;
+		bottom: 23px;
+		height: 1px;
+		width: 100%;
+		--tw-bg-opacity: 1;
+		background-color: rgb(188 188 188 / var(--tw-bg-opacity));
+				content: " ";
+				z-index: -1;
+}
+.entry-content .application-status, .block-editor-block-list__layout .application-status {
+		--tw-bg-opacity: 1;
+		background-color: rgb(236 242 243 / var(--tw-bg-opacity));
+		padding-top: 3.125rem;
+		padding-bottom: 3.125rem;
+		font-family: trade-gothic-next, helvetica, sans-serif;
+}
+.entry-content .application-status__headline, .block-editor-block-list__layout .application-status__headline {
+		font-size: 2.25rem;
+		font-weight: 700;
+}
+.entry-content .application-status__link, .block-editor-block-list__layout .application-status__link {
+		display: inline-block;
+		--tw-bg-opacity: 1;
+		background-color: rgb(21 99 110 / var(--tw-bg-opacity));
+		padding-top: .9375rem;
+		padding-bottom: .9375rem;
+		padding-left: 2.5rem;
+		padding-right: 2.5rem;
+		text-align: center;
+		font-size: 1.125rem;
+		--tw-text-opacity: 1;
+		color: rgb(255 255 255 / var(--tw-text-opacity));
+		transition-property: all;
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+		transition-duration: 300ms;
+}
+.entry-content .application-status__link:hover, .block-editor-block-list__layout .application-status__link:hover {
+		--tw-bg-opacity: 1;
+		background-color: rgb(12 87 95 / var(--tw-bg-opacity));
+}
+.entry-content .application-status__top, .block-editor-block-list__layout .application-status__top {
+		margin-bottom: 1.25rem;
+		display: flex;
+		justify-content: space-between;
+		border-bottom-width: 1px;
+		--tw-border-opacity: 1;
+		border-color: rgb(136 136 136 / var(--tw-border-opacity));
+		padding-bottom: 1.25rem;
+}
+.entry-content .application-status__content, .block-editor-block-list__layout .application-status__content {
+		font-size: 1.125rem;
+}
 body {
 		font-family: trade-gothic-next, helvetica, sans-serif;
 }
 .wp-block {
-		max-width: 1281px;
+		max-width: 1150px;
 }
 .wp-block[data-align="wide"] {
-		max-width: 1281px;
+		max-width: 1150px;
 }
 .wp-block[data-align="full"] {
 		max-width: 100%;
 }
-.focus\:outline-none:focus {
-		outline: 2px solid transparent;
-		outline-offset: 2px;
+.editor-styles-wrapper
+	.edit-post-visual-editor__post-title-wrapper
+	> :where(:not(.alignleft):not(.alignright):not(.alignfull)),
+.editor-styles-wrapper
+	.block-editor-block-list__layout.is-root-container
+	> :where(:not(.alignleft):not(.alignright):not(.alignfull)) {
+		max-width: 1320px !important;
+	margin-left: auto !important;
+	margin-right: auto !important;
 }
-.focus\:ring-2:focus {
-		--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-		--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-		box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-.focus\:ring-gray-900:focus {
-		--tw-ring-opacity: 1;
-		--tw-ring-color: rgb(17 24 39 / var(--tw-ring-opacity));
-}
-.focus\:ring-offset-2:focus {
-		--tw-ring-offset-width: 2px;
-}
-.focus\:ring-offset-white:focus {
-		--tw-ring-offset-color: #fff;
-}
-@media (min-width: 640px) {
-		.sm\:w-auto {
-				width: auto;
-		}
+.hover\:bg-secondaryDark:hover {
+		--tw-bg-opacity: 1;
+		background-color: rgb(12 87 95 / var(--tw-bg-opacity));
 }
 @media (min-width: 768px) {
 		.md\:flex {
@@ -424,6 +691,9 @@ body {
 		}
 		.md\:w-1\/2 {
 				width: 50%;
+		}
+		.md\:grid-cols-3 {
+				grid-template-columns: repeat(3, minmax(0, 1fr));
 		}
 }
 @media (min-width: 940px) {
